# alcove

./: CMakeLists.txt  CMakePresets.json  README.md  SECURITY.md  vcpkg-configuration.json  vcpkg.json
src/: alcove.cpp  alcove.hpp  alcove_util.cpp  alcove_util.hpp  core.cpp  core.hpp  main.cpp
